--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <base href="/">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Raleway&display=swap" rel="stylesheet">
   
     <style>
       html, body {
@@ -14,7 +15,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        background-color: #f4f1f0;
+        background-color: #caf1ff26;
         font-family: -apple-system, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue;
       }
       prinssen-review-app {
@@ -35,6 +36,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-performance.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-remote-config.js"></script>
+
 
     <prinssen-review-app id="app"></prinssen-review-app>
     <script type="module" src="./src/prinssen-review-app.js"></script>
