--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <base href="/">
-    <link href="https://fonts.googleapis.com/css?family=Karla|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Merriweather&display=swap" rel="stylesheet">
   
     <style>
       html, body {
